# demo

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  build.gradle.kts  build.sh  go.mod  hello.py  main.py  pixi.toml  pyoxidizer.bzl  pyproject.toml  settings.gradle.kts
.devcontainer/: Dockerfile  devcontainer.json
app/: cli.py
app/commands/: golang.py
app/tools/: golang.py
client/cmd/: main.go
myapp/: __main__.py  hello.py
notebooks/: 测试.ipynb
python_project/: cli.py
python_project/commands/: golang.py
python_project/tools/: consts.py  golang.py
scripts/: builder.py  clean.py  format.py
server/: serve.go
server/cmd/: main.go
service/: api.pb.go  api.proto  api_grpc.pb.go  doc.go
src/main/java/com/example/tutorial/demo/: Main.java
src/main/kotlin/me/jaign/: Main.kt
src/main/kotlin/me/jaign/client/: GreetClient.kt
src/main/kotlin/me/jaign/server/: GreetServer.kt  ServerImpl.kt
src/main/proto/: api.proto
src/main/proto/com/example/tutorial/: api.proto
