[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "odinjaign", email = "jaign@outlook.com" }
]
dependencies = [
    "ipykernel>=6.25.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
